<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        android:background="@color/pacific_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="60dp"/>
    <!-- Image at top left -->
    <ImageView
        android:id="@+id/companyIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/beach"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@id/topBar"
        app:layout_constraintStart_toStartOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="@id/topBar"
        android:layout_marginStart="20dp" />
    <!-- Text to the right of the image -->
    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.70"
        android:text="@string/event_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toTopOf="@id/topBar"
        app:layout_constraintStart_toEndOf="@id/companyIcon"
        app:layout_constraintBottom_toBottomOf="@id/topBar"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
         />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/centerCardView"
        style="?attr/materialCardViewElevatedStyle"
        app:cardBackgroundColor="@color/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/companyName"
        app:layout_constraintWidth_percent="200"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/aboutEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/about_event"
                android:textSize="20sp"
                android:textStyle="bold"
                 />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/eventDescription"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutEvent"
                android:text="@string/event_description"
                android:textSize="14sp"
                android:lineSpacingExtra="2dp"
                 />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amountRaised"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventDescription"
                android:text="@string/amount_raised"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/pacific_blue"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/zeroPercent"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountRaised"
                android:text="0%"
                android:textSize="12sp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hundredPercent"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                app:layout_constraintStart_toEndOf="@id/zeroPercent"
                app:layout_constraintBottom_toTopOf="@id/progressIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="240sp"
                android:layout_marginTop="30dp"
                android:text="100%"
                android:textSize="12sp"
                />


            <ProgressBar
                android:id="@+id/progressIndicator"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/custom_progress_bar"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountRaised"
                app:layout_constraintBottom_toTopOf="@id/donationHistory"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:progress="0"
                android:max="100"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/donationHistory"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressIndicator"
                app:layout_constraintBottom_toTopOf="@id/recyclerView"
                android:text="@string/donation_history"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/donationHistory"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomAppBar"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerCardView"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/bottomNav"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/giveNowButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.65"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/give_now"
                android:textSize="20sp"
                app:cornerRadius="6dp"
                app:elevation="20dp"
                app:strokeWidth="0dp"
                app:strokeColor="@color/cardview_light_background"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>